--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/image/SplashLogo.png
-  #   - images/a_dot_ham.jpeg
+    - assets/image/homeimage.jpg
+    - assets/image/fried.jpg
+    - assets/image/raw.jpg
+    - assets/image/sauces.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -76,11 +79,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/font/Poppins-Light.ttf
+        - asset: assets/font/Poppins-Medium.ttf
+        - asset: assets/font/Poppins-Regular.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
