--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   go_router: ^7.0.0
   font_awesome_flutter: ^10.4.0
   get: ^4.6.5
+
   flutter:
     sdk: flutter
 
@@ -38,6 +39,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_svg: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -63,12 +65,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/image/SplashLogo.png
-    - assets/image/homeimage.jpg
-    - assets/image/fried.jpg
-    - assets/image/raw.jpg
-    - assets/image/sauces.jpg
     - assets/image/
+    - assets/icons/
+    - assets/image/IMG_4048h.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
