link Branches collection to app

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   go_router: ^7.0.0
   font_awesome_flutter: ^10.4.0
   get: ^4.6.5
+  firebase_core: ^2.14.0
+  cloud_firestore: ^4.8.2
+  image_picker: ^1.0.0
 
   flutter:
     sdk: flutter
