--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   go_router: ^7.0.0
   font_awesome_flutter: ^10.4.0
   get: ^4.6.5
-  firebase_core: ^2.14.0
+  firebase_core: ^2.15.0
   cloud_firestore: ^4.8.2
 
 
@@ -43,6 +43,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.5
+  google_fonts: ^5.1.0
+  mask_text_input_formatter: ^2.5.0
+  email_validator: ^2.1.17
+  simple_shadow: ^0.3.1
+  firebase_auth: ^4.7.1
 
 dev_dependencies:
   flutter_test:
