--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,10 +89,10 @@ flutter:
         - asset: assets/font/Poppins-Light.ttf
         - asset: assets/font/Poppins-Medium.ttf
         - asset: assets/font/Poppins-Regular.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+
+    - family: Alexandria
+      fonts:
+        - asset: assets/font/Alexandria-VariableFont_wght.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
