--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   email_validator: ^2.1.17
   simple_shadow: ^0.3.1
   firebase_auth: ^4.7.1
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
