--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   simple_shadow: ^0.3.1
   firebase_auth: ^4.7.2
   shared_preferences: ^2.2.0
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
