Modify Item in CartPage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   simple_shadow: ^0.3.1
   firebase_auth: ^4.7.2
   shared_preferences: ^2.2.0
+  xdg_directories: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +78,7 @@ flutter:
     - assets/image/
     - assets/icons/
     - assets/image/IMG_4048h.png
+    #- assets/image/login_pic.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
