--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   shared_preferences: ^2.2.0
   xdg_directories: ^1.0.1
   cached_network_image: ^3.2.3
+  flutter_phone_direct_caller: ^2.1.1
 
 
 
