--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   xdg_directories: ^1.0.1
   cached_network_image: ^3.2.3
   flutter_phone_direct_caller: ^2.1.1
+  image_picker: ^1.0.2
 
 
 
