--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,12 +53,20 @@ dependencies:
   cached_network_image: ^3.2.3
   flutter_phone_direct_caller: ^2.1.1
   image_picker: ^1.0.2
+  rename: ^2.1.1
 
 
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.13.1"
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/image/play_store_512.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
