--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_phone_direct_caller: ^2.1.1
   image_picker: ^1.0.2
   rename: ^2.1.1
+  flutter_staggered_grid_view: ^0.7.0
 
 
 
