--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   rename: ^2.1.1
   flutter_staggered_grid_view: ^0.7.0
   carousel_slider: ^4.2.1
+  flutter_expanded_tile: ^0.3.7
 
 
 
