--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   carousel_slider: ^4.2.1
   flutter_expanded_tile: ^0.3.7
+  package_info_plus: ^4.1.0
+  url_launcher: ^6.1.14
+  connectivity_plus: ^4.0.2
 
 
 
